# Sellorama

./: .env.sample  .gitignore  README.md  docker-compose.yaml
.github/workflows/: build_and_publish.yml  integration_tests.yml  rust.yml
backend/: .env.sample  Cargo.toml  Dockerfile
backend/.sqlx/: query-7c31e2d7e3e616486a7d10ae6bf88de326936e3252344538c224fd5b58378a69.json  query-7f80e98eed6f8e235e0cdf49c103f5c51cfb45be17811428497edcb12e0ce295.json  query-9489ac64d9aee6023b41acef8f2337542b69a6cac5291f25f4dfc9088bde0db4.json  query-95e11809dfaec5ed72751ab930eaa62379a25a8e2453756991121b3d3968f5ec.json  query-ea63facc395ce8a4ad90f567080aabecd5971a50cb72d4177c138d89a9f145b0.json  query-f3cbffca4d4305b36605054d1cab65dfa33726de439246cad66fa77a962bf4df.json  query-f4df0fac256e1a5e838a0507847b6bb108838aaaaedc99a7c9b159d3f6853724.json  query-fa8569b3f205710a428f3c06541a60b5606245abc224cea04012e512049324fc.json
backend/init/: init.sql
backend/migrations/: 20240208095718_sessions.sql  20240210054951_sessions.sql  20240210124534_sessions.sql  20240218070000_init.sql  20240218070009_sessions.sql  20240218070024_carts.sql  20240311005642_stocks.sql  20240321131219_functions.sql  20240325085259_ratings_trigger.sql  20240413094818_item_media.sql  20240420061027_post_count_trigger.sql  20240529164652_orders_and_address.sql
backend/scripts/: start.sh
backend/src/: cart.rs  errors.rs  item.rs  main.rs  objects.rs  order.rs  tests.rs  user.rs
backend/src/item/: mod.rs
backend/src/post/: mod.rs
backend/src/user/: mod.rs
init/: init.sql
