[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
sqlx = { version = "0.7.3", features = ["postgres", "macros","runtime-async-std","uuid","chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
tokio = {version= "1.36.0",features =["rt-multi-thread"]}
base64 = "0.21.7"
dotenv = "0.15.0"
utoipa = { version = "4.2.0", features = ["uuid", "axum_extras", "chrono", "serde_yaml"] }
utoipa-swagger-ui = {version="6.0.0",features=["axum"]}
uuid = {version = "1.7.0",features = ["v4","serde"]}
chrono = {version = "0.4.33",features = ["serde","rustc-serialize"]}
