[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
#http server
axum = {version = "0.7.4",features = ["multipart"]}
tokio = {version= "1.36.0",features =["rt-multi-thread"]}

#database connection
sqlx = { version = "0.7.3", features = ["postgres", "macros","runtime-async-std","uuid","chrono","rust_decimal"] }
tower-http = {version = "0.5.2", features = ["cors"]}
dotenv = "0.15.0"

#data validation and serialization
chrono = {version = "0.4.33",features = ["serde","rustc-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
base64 = "0.22.0"
uuid = {version = "1.7.0",features = ["v4","serde"]}
regex = "1.10.3"
rust_decimal = { version = "1.35.0", features = ["std", "serde"] }
argon2 = {version = "0.5.3", features = ["password-hash"]}

#aws s3
aws-config = "1.1.9"
aws-sdk-s3 = {version="1.20.0" ,features=["behavior-version-latest"]}

#documentation
utoipa = { version = "4.2.3", features = ["uuid", "axum_extras", "chrono", "serde_yaml","decimal"] }
utoipa-swagger-ui = {version="7.0.1",features=["axum"]}
utoipa-rapidoc = {version="4.0.0",features=["axum"]}
utoipa-redoc = {version="4.0.0",features=["axum"]}
anyhow = "1.0.81"

#testing
reqwest = {version = "0.12.4",features = ["multipart","blocking"]}
